Added mid section

--- a/index.html
+++ b/index.html
@@ -33,4 +33,31 @@
     </div>
     </div>
   </div>
+  <div class="mid">
+    <div class="mid-head">
+      <p>Some random information.</p></div>
+    <div class="tile-sec">
+      <div class="tile tile1">
+        <div>
+        </div>
+        <p> this is some subtext under an illustration ot image</p>
+      </div>
+      <div class="tile tile2">
+        <div>
+        </div>
+        <p> this is some subtext under an illustration of image</p>
+      </div>
+      <div class="tile tile3">
+        <div>
+        </div>
+        <p> this is some subtext under an illustration ot image</p>
+      </div>
+      <div class="tile tile4">
+        <div>
+        </div>
+        <p> this is some subtext under an illustration ot image</p>
+      </div>
+    </div>
+    
+  </div>
 </body>
