Added quote section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
         <p> this is some subtext under an illustration ot image</p>
       </div>
     </div>
-    
+  </div>
+  <div class="quote">
+    <div class="quote-text">
+      <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's filling up space or
+        maybe I am crying. Who knows? All I know is AI will take our job.
+      </p>
+    </div>
+    <div class="quote-name">
+      <p> -Student in pain, pain in student</p>
+    </div>
   </div>
 </body>
