Added bottom section, footer. Task completed.

--- a/index.html
+++ b/index.html
@@ -69,4 +69,20 @@
       <p> -Student in pain, pain in student</p>
     </div>
   </div>
+  <div class="bottom">
+    <div class="bottom-box">
+      <div class="box-text">
+        <p class="text-action">Call to action! It's time!</p>
+        <p class="text-sign"> Sign up for our product by clicking that button 
+          right over there!
+        </p>
+      </div>
+      <div class="box-button"> 
+        <button class="bottom-button"> Sign up</button>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <p class="footer-text">Copyright @ The Odin Project 2021</p>
+  </div>
 </body>
